# physics

./: README.markdown  physics.cabal
Physics/: AABB.hs  Epsilon.hs  Friction.hs  Geometry.hs  Involutive.hs  Lens.hs  Material.hs  Matrix.hs  Metric.hs  Plucker.hs  Quaternion.hs  Rep.hs  Simulation.hs  V2.hs  V3.hs  V4.hs  Vector.hs
Physics/Geometry/: Sphere.hs
Physics/Hull/: Convex.hs
